# dc-tp-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
informe/: informe.tex
test/: CMakeLists.txt  GoogleTest.cmake
